# dataverse-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/changelog/: SKILL.md
.agents/skills/dataverse-mcp/: SKILL.md
.agents/skills/dataverse-mcp/reference/: odata-patterns.md  tools.md
.claude/skills/changelog/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  test.yml
docs/: security-review-2026-06-30.md
docs/adr/: 0001-environment-variable-tools.md  0002-environment-variable-tools-split-and-name-resolution.md
docs/design/: interactive-token-cache-persistence.md  solution-import-export.md  tool-description-style-guide.md
samples/SamplePlugin/: .gitignore  ContactPlugin.cs  ContactPlugin.csproj  README.md  generate-snk.ps1
src/dataverse_mcp/: __init__.py  _app.py  batch.py  client.py  models.py  server.py
src/dataverse_mcp/tools/: __init__.py  apps.py  connection_references.py  custom_apis.py  dependencies.py  environment_variable_values.py  environment_variables.py  environments.py  forms.py  jobs.py  metadata.py  plugin_registration.py  plugins.py  security.py  solutions.py  tables.py  views.py  web_resources.py
tests/: smoke_test.py  test_alternate_keys.py  test_audit_history.py  test_auth_errors.py  test_batch.py  test_batch_safeguard.py  test_batch_serializer.py  test_classic_processes.py  test_delete_safeguard_security.py  test_fetchxml.py  test_input_validation_security.py  test_jobs.py  test_list_paging.py  test_odata_literal_encoding.py  test_odata_utils.py  test_plugin_registration.py  test_published_flag.py  test_record_crud.py  test_request_with_retry.py  test_solution_hardening.py  test_solution_import_export.py  test_token_cache.py  test_tool_categories.py  test_url_allowlist.py  test_web_resources.py  test_xml_dos.py
tests/integration/: conftest.py  test_alternate_keys_integration.py  test_classic_processes_integration.py  test_odata_injection_integration.py  test_record_crud_integration.py  test_whoami.py  test_xml_defused_integration.py
